Calculated the time to find path for LinkedList and ArrayList and changed to latter for +-20% performance increase.